# percolation-simulation

./: .gitattributes  CMakeLists.txt  README.md
apps/: CMakeLists.txt  get_percolation_results.cpp  simulation.cpp
notebooks/: plot_results.ipynb  plot_simulation_results.ipynb
src/: CMakeLists.txt  get_curve_data.cpp  get_percolation_results.cpp  lattice.tpp  percolation.cpp  percolation.h  percolation.hpp  percolation_results.csv  plot_percolation_curve.ipynb  plot_results.ipynb
